automation-service/k8s/configs/template/ibmcloud-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: worldwire-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        protocol: HTTP
        number: 80
      hosts:
        - "*"
    - port:
        name: https
        protocol: HTTPS
        number: 443
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "*"
